; ModuleID = '/home/carl/AnghaBench/h2o/deps/neverbleed/extr_neverbleed.c_expbuf_read.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/neverbleed/extr_neverbleed.c_expbuf_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.expbuf_t = type { i64* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.expbuf_t*, i32)* @expbuf_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @expbuf_read(%struct.expbuf_t* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.expbuf_t*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store %struct.expbuf_t* %0, %struct.expbuf_t** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  %8 = call i64 @read_nbytes(i32 %7, i64* %6, i64 8)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %29

11:                                               ; preds = %2
  %12 = load %struct.expbuf_t*, %struct.expbuf_t** %4, align 8
  %13 = load i64, i64* %6, align 8
  %14 = call i32 @expbuf_reserve(%struct.expbuf_t* %12, i64 %13)
  %15 = load i32, i32* %5, align 4
  %16 = load %struct.expbuf_t*, %struct.expbuf_t** %4, align 8
  %17 = getelementptr inbounds %struct.expbuf_t, %struct.expbuf_t* %16, i32 0, i32 0
  %18 = load i64*, i64** %17, align 8
  %19 = load i64, i64* %6, align 8
  %20 = call i64 @read_nbytes(i32 %15, i64* %18, i64 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %11
  store i32 -1, i32* %3, align 4
  br label %29

23:                                               ; preds = %11
  %24 = load i64, i64* %6, align 8
  %25 = load %struct.expbuf_t*, %struct.expbuf_t** %4, align 8
  %26 = getelementptr inbounds %struct.expbuf_t, %struct.expbuf_t* %25, i32 0, i32 0
  %27 = load i64*, i64** %26, align 8
  %28 = getelementptr inbounds i64, i64* %27, i64 %24
  store i64* %28, i64** %26, align 8
  store i32 0, i32* %3, align 4
  br label %29

29:                                               ; preds = %23, %22, %10
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i64 @read_nbytes(i32, i64*, i64) #1

declare dso_local i32 @expbuf_reserve(%struct.expbuf_t*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
